Fixed some quirks